# faceoff

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  release.yml  test.yml
docs/: index.md  modules.md
src/faceoff/: __init__.py  app.py  cli.py
src/faceoff/api/: __init__.py  client.py
src/faceoff/screens/: __init__.py  game.py  player.py  pregame.py  schedule.py  standings.py  stats.py  teams.py
src/faceoff/widgets/: __init__.py  game_card.py  play_by_play.py  scoreboard.py
tests/: test_foo.py
